--- a/Zaika/MainWindow.xaml
+++ b/Zaika/MainWindow.xaml
@@ -1,9 +1,10 @@
-﻿<Window x:Name="tableWindow" x:Class="Zaika.Window1"
+﻿<Window x:Name="tableWindow" x:Class="Zaika.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Zaika"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         Title="ZaikaDB Manager" Height="651.088" Width="953.284"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
