--- a/Zaika/LoginWindow.xaml
+++ b/Zaika/LoginWindow.xaml
@@ -7,22 +7,22 @@
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto" ResizeMode="NoResize" Topmost="True" WindowStartupLocation="CenterScreen" FontSize="14.667" WindowStyle="ToolWindow">
 
-  <Grid Margin="0,0,0,0">
-    <Grid.RowDefinitions>
-      <RowDefinition Height="0*" />
-      <RowDefinition />
-    </Grid.RowDefinitions>
-    <TextBox x:Name="Login" HorizontalAlignment="Left" Height="28" Margin="105,29,0,0" Grid.Row="0"
+    <Grid Margin="0,0,0,0">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0*" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <TextBox x:Name="Login" HorizontalAlignment="Left" Height="28" Margin="105,29,0,0" Grid.Row="0"
              Grid.RowSpan="2" TextWrapping="Wrap" VerticalAlignment="Top" Width="170" Background="#00000000"
-             KeyDown="LoginKeyDown" SelectionBrush="#FF35A640" RenderTransformOrigin="-1,0" TextAlignment="Center" MaxLines="1" MaxLength="16" />
-    <PasswordBox x:Name="Password" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="105,65,0,0" Grid.Row="0" Grid.RowSpan="2"
-                 VerticalAlignment="Top" Width="170" Background="#00000000" KeyDown="PasswordKeyDown" Height="28" RenderTransformOrigin="0.341,0.917" />
-    <Label Content="Login:" HorizontalAlignment="Left" Margin="33,29,0,0" Grid.Row="0"
+             RenderTransformOrigin="-1,0" TextAlignment="Center" MaxLines="1" MaxLength="16" />
+        <PasswordBox x:Name="Password" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="105,65,0,0" Grid.Row="0" Grid.RowSpan="2"
+                 VerticalAlignment="Top" Width="170" Background="#00000000" Height="28" RenderTransformOrigin="0.341,0.917" />
+        <Label Content="Login:" HorizontalAlignment="Left" Margin="33,29,0,0" Grid.Row="0"
            Grid.RowSpan="2" VerticalAlignment="Top" RenderTransformOrigin="0.495,0.457" />
-    <Label Content="Password:" HorizontalAlignment="Left" Margin="12,65,0,0" Grid.Row="0"
+        <Label Content="Password:" HorizontalAlignment="Left" Margin="12,65,0,0" Grid.Row="0"
            Grid.RowSpan="2" VerticalAlignment="Top" RenderTransformOrigin="0.495,0.457" />
-    <Button x:Name="SignInButton" Content="Sign in" HorizontalAlignment="Left" Margin="169,114,0,0" Grid.Row="0"
+        <Button x:Name="SignInButton" Content="Sign in" HorizontalAlignment="Left" Margin="169,114,0,0" Grid.Row="0"
             Grid.RowSpan="2" VerticalAlignment="Top" Width="106" BorderThickness="5,1,1,1" Click="TryToSignIn"
-            Style="{DynamicResource MaterialDesignRaisedAccentButton}" Background="#FF3CC549" BorderBrush="#FF137A1D" TabIndex="3" />
-  </Grid>
+            Style="{DynamicResource MaterialDesignRaisedAccentButton}" TabIndex="3" />
+    </Grid>
 </сontrols:MetroWindow>
