--- a/Zaika/LoginWindow.xaml
+++ b/Zaika/LoginWindow.xaml
@@ -1,29 +1,33 @@
 ﻿<сontrols:MetroWindow x:Name="LoginForm" x:Class="Zaika.LoginWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:сontrols="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        Title="Sign in" Height="207.387" Width="330.372"
-        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-        Background="{DynamicResource MaterialDesignPaper}"
-        FocusManager.FocusedElement="{Binding ElementName=Login}"
-        FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto" ResizeMode="NoResize" Topmost="True" WindowStartupLocation="CenterScreen" FontSize="14.667" WindowStyle="ToolWindow">
+                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                      xmlns:сontrols="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                      Title="Sign in" Height="207.387" Width="330.372"
+                      TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+                      Background="{DynamicResource MaterialDesignPaper}"
+                      FocusManager.FocusedElement="{Binding ElementName=Login}"
+                      FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto"
+                      Topmost="True" WindowStartupLocation="CenterScreen" FontSize="14.667" WindowStyle="ToolWindow"
+                      MinWidth="330.372" MinHeight="207.387" ResizeMode="NoResize">
 
-    <Grid Margin="0,0,0,0">
+    <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="0*" />
-            <RowDefinition />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="4*" />
+            <RowDefinition Height="1*" />
         </Grid.RowDefinitions>
-        <TextBox x:Name="Login" HorizontalAlignment="Left" Height="28" Margin="105,29,0,0" Grid.Row="0"
-             Grid.RowSpan="2" TextWrapping="Wrap" VerticalAlignment="Top" Width="170" Background="#00000000"
-             RenderTransformOrigin="-1,0" TextAlignment="Center" MaxLines="1" MaxLength="16" TabIndex="0" />
-        <PasswordBox x:Name="Password" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="105,65,0,0" Grid.Row="0" Grid.RowSpan="2"
-                 VerticalAlignment="Top" Width="170" Background="#00000000" Height="28" RenderTransformOrigin="0.341,0.917" TabIndex="1" />
-        <Label Content="Login:" HorizontalAlignment="Left" Margin="33,29,0,0" Grid.Row="0"
-           Grid.RowSpan="2" VerticalAlignment="Top" RenderTransformOrigin="0.495,0.457" />
-        <Label Content="Password:" HorizontalAlignment="Left" Margin="12,65,0,0" Grid.Row="0"
-           Grid.RowSpan="2" VerticalAlignment="Top" RenderTransformOrigin="0.495,0.457" />
-        <Button x:Name="SignInButton" Content="Sign in" HorizontalAlignment="Left" Margin="169,114,0,0" Grid.Row="0"
-            Grid.RowSpan="2" VerticalAlignment="Top" Width="106" BorderThickness="5,1,1,1" Click="TryToSignIn"
-            Style="{DynamicResource MaterialDesignRaisedAccentButton}" TabIndex="2" />
+        <TextBox x:Name="Login" Margin="105,0,50,92" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Center"
+                 Background="#00000000"
+                 RenderTransformOrigin="-1,0" TextAlignment="Center" MaxLines="1" MaxLength="16" TabIndex="0" />
+        <PasswordBox x:Name="Password" HorizontalContentAlignment="Center" Margin="105,38,50,53" Grid.Row="1"
+                     VerticalAlignment="Center" Background="#00000000" RenderTransformOrigin="0.341,0.917" TabIndex="1" />
+        <Label Content="Login:" Margin="51,0,0,90" RenderTransformOrigin="0.495,0.457" HorizontalAlignment="Left"
+               VerticalAlignment="Center" Grid.Row="1" />
+        <Label Content="Password:" HorizontalAlignment="Left" Margin="23,38,0,52" Grid.Row="1"
+               VerticalAlignment="Center" RenderTransformOrigin="0.495,0.457" />
+        <Button x:Name="SignInButton" Content="Sign in" Margin="169,86,50,0" Grid.Row="1" VerticalAlignment="Center"
+                BorderThickness="5,1,1,1" Click="TryToSignIn"
+                Style="{DynamicResource MaterialDesignRaisedAccentButton}" TabIndex="2" MinWidth="103"
+                HorizontalAlignment="Right" />
     </Grid>
 </сontrols:MetroWindow>
