--- a/Zaika/MainWindow.xaml
+++ b/Zaika/MainWindow.xaml
@@ -1,14 +1,12 @@
 ﻿<controls:MetroWindow x:Name="TableWindow" x:Class="Zaika.MainWindow"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                       xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-                      mc:Ignorable="d"
                       Title="ZaikaDB Manager" Height="651.088" Width="953.284"
                       TextElement.Foreground="{DynamicResource MaterialDesignBody}"
                       Background="{DynamicResource MaterialDesignPaper}"
-                      FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto">
+                      FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto"
+                      WindowStartupLocation="CenterScreen" >
     <Grid>
         <TabControl x:Name="TabControl" HorizontalAlignment="Left" Height="610" VerticalAlignment="Top" Width="935"
                     FontSize="16">
@@ -20,7 +18,7 @@
                         <ColumnDefinition Width="755*" />
                     </Grid.ColumnDefinitions>
                     <ListBox x:Name="Products" Margin="10,10,0,10" BorderThickness="2"
-                             ScrollViewer.CanContentScroll="False" BorderBrush="#FF2F8127" HorizontalAlignment="Left"
+                             ScrollViewer.CanContentScroll="False" BorderBrush="{DynamicResource AccentColorBrush3}" HorizontalAlignment="Left"
                              Width="382" Grid.ColumnSpan="2" />
                     <TextBox x:Name="NameProd" HorizontalAlignment="Left" Height="29" Margin="468,52,0,0"
                              TextWrapping="Wrap" VerticalAlignment="Top" Width="266" Panel.ZIndex="2" Grid.Column="1" />
@@ -52,7 +50,7 @@
                     <Label x:Name="LabelCopy2" Content="Enter count to delete:" HorizontalAlignment="Left"
                            Margin="258,251,0,0" VerticalAlignment="Top" Width="210" Panel.ZIndex="2" Grid.Column="1" />
                     <ListBox x:Name="ProductsWh" Margin="252,399,0,10" BorderThickness="2"
-                             ScrollViewer.CanContentScroll="False" BorderBrush="#FF2F8127" HorizontalAlignment="Left"
+                             ScrollViewer.CanContentScroll="False" BorderBrush="{DynamicResource AccentColorBrush3}" HorizontalAlignment="Left"
                              Width="493" Grid.Column="1" />
                     <Label x:Name="Label3" Content="Count in WHs:" HorizontalAlignment="Left" Height="30"
                            Margin="252,364,0,0" VerticalAlignment="Top" Width="296" FontSize="20" Grid.Column="1" />
@@ -64,11 +62,11 @@
                      VerticalAlignment="Center" HorizontalContentAlignment="Left">
                 <Grid Background="#FFE5E5E5">
                     <ListBox x:Name="ProductsCopy" Margin="10,10,0,10" BorderThickness="2"
-                             ScrollViewer.CanContentScroll="False" BorderBrush="#FF2F8127" HorizontalAlignment="Left"
+                             ScrollViewer.CanContentScroll="False" BorderBrush="{DynamicResource AccentColorBrush3}" HorizontalAlignment="Left"
                              Width="382" />
                     <Grid Background="#FFE5E5E5">
                         <ListBox x:Name="Products1" Margin="10,10,0,10" BorderThickness="2"
-                                 ScrollViewer.CanContentScroll="False" BorderBrush="#FF2F8127"
+                                 ScrollViewer.CanContentScroll="False" BorderBrush="{DynamicResource AccentColorBrush3}"
                                  HorizontalAlignment="Left" Width="382" />
                         <TextBox x:Name="NameProd1" HorizontalAlignment="Left" Height="29" Margin="595,52,0,0"
                                  TextWrapping="Wrap" VerticalAlignment="Top" Width="313" Panel.ZIndex="2" />
@@ -110,7 +108,7 @@
                 <Grid Background="#FFE5E5E5">
                     <Grid Background="#FFE5E5E5">
                         <ListBox x:Name="Products2" Margin="10,10,0,10" BorderThickness="2"
-                                 ScrollViewer.CanContentScroll="False" BorderBrush="#FF2F8127"
+                                 ScrollViewer.CanContentScroll="False" BorderBrush="{DynamicResource AccentColorBrush3}"
                                  HorizontalAlignment="Left" Width="382" />
                         <TextBox x:Name="NameProd2" HorizontalAlignment="Left" Height="29" Margin="594,52,0,0"
                                  TextWrapping="Wrap" VerticalAlignment="Top" Width="314" Panel.ZIndex="2" />
@@ -143,7 +141,7 @@
                      Width="144" Margin="24,0,-24,0" HorizontalContentAlignment="Left">
                 <Grid Background="#FFE5E5E5">
                     <ListBox x:Name="Products2Copy" Margin="10,10,0,10" BorderThickness="2"
-                             ScrollViewer.CanContentScroll="False" BorderBrush="#FF2F8127" HorizontalAlignment="Left"
+                             ScrollViewer.CanContentScroll="False" BorderBrush="{DynamicResource AccentColorBrush3}" HorizontalAlignment="Left"
                              Width="909" />
                 </Grid>
             </TabItem>
