--- a/Zaika/MainWindow.xaml
+++ b/Zaika/MainWindow.xaml
@@ -6,7 +6,8 @@
                       TextElement.Foreground="{DynamicResource MaterialDesignBody}"
                       Background="{DynamicResource MaterialDesignPaper}"
                       FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto"
-                      WindowStartupLocation="CenterScreen" >
+                      WindowStartupLocation="CenterScreen">
     <ListBox x:Name="Producers" HorizontalContentAlignment="Stretch" Margin="5" BorderThickness="2"
-            ScrollViewer.CanContentScroll="True" BorderBrush="{DynamicResource AccentColorBrush3}" />
+            ScrollViewer.CanContentScroll="True" BorderBrush="{DynamicResource AccentColorBrush3}"
+             Width="460"/>
 </controls:MetroWindow>
