--- a/Zaika/MainWindow.xaml
+++ b/Zaika/MainWindow.xaml
@@ -10,7 +10,7 @@
     <Grid>
         <ListBox x:Name="Producers" HorizontalContentAlignment="Stretch" Margin="5" BorderThickness="2"
             ScrollViewer.CanContentScroll="True" BorderBrush="{DynamicResource AccentColorBrush3}"
-             Width="460"/>
+             Width="460" ScrollViewer.VerticalScrollBarVisibility="Hidden" />
 
         <Button Style="{StaticResource MaterialDesignFloatingActionAccentButton}"
                         Margin="509,513,0,32" HorizontalAlignment="Left"
