Change opacity of floating button on mousemove

--- a/Zaika/MainWindow.xaml
+++ b/Zaika/MainWindow.xaml
@@ -12,8 +12,8 @@
         <ListBox x:Name="Operations" HorizontalContentAlignment="Stretch" Margin="0"
             ScrollViewer.CanContentScroll="True" ScrollViewer.VerticalScrollBarVisibility="Auto" />
 
-        <Button Style="{StaticResource MaterialDesignFloatingActionAccentButton}"
+        <Button Name="Floating" Style="{StaticResource MaterialDesignFloatingActionAccentButton}"
             Margin="30" HorizontalAlignment="Right" VerticalAlignment="Bottom"
-            Content="+" FontSize="30" Width="40" Height="40"/>
+            Content="+" FontSize="30" Width="40" Height="40" Opacity="0.3"/>
     </Grid>
 </controls:MetroWindow>
