--- a/Zaika/MainWindow.xaml
+++ b/Zaika/MainWindow.xaml
@@ -14,6 +14,6 @@
 
         <Button Name="Floating" Style="{StaticResource MaterialDesignFloatingActionAccentButton}"
             Margin="30" HorizontalAlignment="Right" VerticalAlignment="Bottom"
-            Content="+" FontSize="30" Width="40" Height="40" Opacity="0.3"/>
+            Content="+" FontSize="30" Width="40" Height="40"/>
     </Grid>
 </controls:MetroWindow>
