--- a/Zaika/ProducerInfo.xaml
+++ b/Zaika/ProducerInfo.xaml
@@ -3,15 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d"
-             d:DesignHeight="200" d:DesignWidth="500" FontSize="16" MinWidth="450">
-    
-    
+             mc:Ignorable="d" FontSize="14" MinWidth="374" Height="60" Width="374">
+
+
     <StackPanel Orientation="Vertical" VerticalAlignment="Center">
 
         <StackPanel Orientation="Horizontal">
-            <TextBlock Name="Title" Text="{Binding Path=Producer.Name, FallbackValue=Producer}" FontSize="30" VerticalAlignment="Bottom" FontFamily="Segoe UI Light" />
-            <TextBlock Name="Address" Text="{Binding Path=Producer.City, FallbackValue=City}" LineHeight="24" FontSize="16" 
+            <TextBlock Name="Title" Text="{Binding Path=Producer.Name, FallbackValue=Producer}" FontSize="20" VerticalAlignment="Bottom" FontFamily="Segoe UI Light" />
+            <TextBlock Name="Address" Text="{Binding Path=Producer.City, FallbackValue=City}" LineHeight="18" FontSize="16" 
                        Margin="8,0,0,0" VerticalAlignment="Bottom" Foreground="#FF9E9E9E" FontFamily="Segoe UI Semilight" />
         </StackPanel>
 
@@ -19,22 +18,22 @@
 
         <Grid Height="{Binding InfoHeight, FallbackValue=30}" Visibility="{Binding ShowInfo}">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" MinWidth="189" />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
 
             <StackPanel Grid.Column="0" Orientation="Horizontal" Visibility="{Binding ShowIncome}">
                 <TextBlock Text="⤽" FontSize="40" FontFamily="Trebuchet MS" Padding="0,0,0,5" VerticalAlignment="Center" Foreground="#FF30C329" />
-                <TextBlock Name="IName" Text="{Binding Path=Last.IncomeProduct, FallbackValue=Product}" Margin="0,0,7,0" VerticalAlignment="Center" />
-                <TextBlock Name="ICost" Text="{Binding Path=Last.IncomePrice, FallbackValue=500$, StringFormat={}{0:#,#.#}$ }" Margin="0,0,7,0" VerticalAlignment="Center" />
-                <TextBlock Name="IDate" Text="{Binding Path=Last.IncomeDate, FallbackValue='19.04.2014', StringFormat=d}" VerticalAlignment="Center" />
+                <TextBlock Name="IName" Text="{Binding Path=Last.IncomeProduct, FallbackValue=Product}" Margin="0,0,7,0" VerticalAlignment="Center" FontSize="13.333" />
+                <TextBlock Name="ICost" Text="{Binding Path=Last.IncomePrice, FallbackValue=500$, StringFormat={}{0:#,#.#}$ }" Margin="0,0,7,0" VerticalAlignment="Center" FontSize="13.333" />
+                <TextBlock Name="IDate" Text="{Binding Path=Last.IncomeDate, FallbackValue='19.04.2014', StringFormat=d}" VerticalAlignment="Center" FontSize="13.333" />
             </StackPanel>
 
-            <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" Visibility="{Binding ShowOutcome}">
-                <TextBlock Text="⤼" FontSize="40" FontFamily="Trebuchet MS" Padding="0,0,0,5" VerticalAlignment="Center" Foreground="#FFEC4635" />
-                <TextBlock Name="OName" Margin="0,0,7,0" Text="{Binding Path=Last.OutcomeProduct, FallbackValue=Product}" VerticalAlignment="Center" />
-                <TextBlock Name="OCost" Margin="0,0,7,0" Text="{Binding Path=Last.OutcomePrice, FallbackValue=99$, StringFormat={}{0:#,#.#}$ }" VerticalAlignment="Center" />
-                <TextBlock Name="ODate" Margin="0,0,10,0" Text="{Binding Path=Last.OutcomeDate, FallbackValue='06.03.2016', StringFormat=d}" VerticalAlignment="Center" />
+            <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" Visibility="{Binding ShowOutcome}" Width="189">
+                <TextBlock Text="⤼" FontSize="40" FontFamily="Trebuchet MS" Padding="0,0,0,5" VerticalAlignment="Center" Foreground="#FFEC4635" Margin="0,-11" />
+                <TextBlock x:Name="OName" Margin="0,0,7,0" Text="{Binding Last.OutcomeProduct, FallbackValue=Product}" VerticalAlignment="Center" FontSize="13.333" />
+                <TextBlock x:Name="OCost" Margin="0,0,7,0" Text="{Binding Last.OutcomePrice, FallbackValue=99$, StringFormat=\{0:#\,#.#\}$}" VerticalAlignment="Center" FontSize="13.333" />
+                <TextBlock x:Name="ODate" Margin="0,0,10,0" Text="{Binding Last.OutcomeDate, FallbackValue=06.03.2016, StringFormat=d}" VerticalAlignment="Center" FontSize="13.333" />
             </StackPanel>
         </Grid>
 
