--- a/Zaika/Add.xaml
+++ b/Zaika/Add.xaml
@@ -22,10 +22,10 @@
         <Label x:Name="label1" Content="Warehouse:" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.944,0.038" Grid.Column="1" Height="26" Width="72"/>
         <ListBox x:Name="Products" Grid.Column="2" Margin="10,26,10,10"/>
         <Label x:Name="label2" Content="Product" Grid.Column="2" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Height="26" Width="51"/>
-        <Label x:Name="label3" Content="Price:" Grid.Column="3" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="18.667"/>
-        <Label x:Name="label4" Content="Augment: " Grid.Column="3" HorizontalAlignment="Left" Margin="10,95,0,0" VerticalAlignment="Top" FontSize="18.667"/>
-        <TextBox x:Name="Price" Grid.Column="3" Height="40" Margin="10,50,10,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="18.667"/>
-        <TextBox x:Name="Augment" Grid.Column="3" Height="40" Margin="10,130,10,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="18.667"/>
-        <Button x:Name="button" Content="Confirm" Grid.Column="3" HorizontalAlignment="Left" Margin="10,588,0,0" VerticalAlignment="Top" Width="207" Height="51" Click="button_Click"/>
+        <Label x:Name="label3" Content="Price:" Grid.Column="3" HorizontalAlignment="Left" Margin="47,10,0,0" VerticalAlignment="Top" FontSize="18.667"/>
+        <Label x:Name="label4" Content="Augment: " Grid.Column="3" HorizontalAlignment="Left" Margin="10,55,0,0" VerticalAlignment="Top" FontSize="18.667" Width="91"/>
+        <TextBox x:Name="Price" Grid.Column="3" Height="40" Margin="106,10,10,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="18.667" Text="1" HorizontalContentAlignment="Center"/>
+        <TextBox x:Name="Augment" Grid.Column="3" Height="40" Margin="106,55,10,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="18.667" Text="1" HorizontalContentAlignment="Center"/>
+        <Button x:Name="button" Content="Confirm" Grid.Column="3" HorizontalAlignment="Left" Margin="10,131,0,0" VerticalAlignment="Top" Width="207" Height="51" Click="button_Click"/>
     </Grid>
 </controls:MetroWindow>
